--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-08-18  James Pallister  <james.pallister@embecosm.com>
+
+	* goal.def: To keep compatability don't generate any constants 
+		larger than 32-bits.
+
 2014-08-17  James Pallister  <james.pallister@embecosm.com>
 
 	* goal.def: Some of the goals use the 0x80000000 constant. These are
